src/test/deca/codegen/valid/Objet/testCast.deca
// Description:
//    tests division flottante sur 0; débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//
//
//
// Historique:
//    cree le 20/01/2021

{

    int x = 2;
    float y = (float) (x);
    print(y);
}

