src/test/deca/codegen/invalid/testDeborFloat4.deca
// Description:
//  débordement lors d'opération arithmétique sur flottants.
//
// Resultats:
//
//
//
// Historique:
//    cree le 20/01/2021

{
    float x = -1000;
    float a = 100000000000.0;
    while(true) {
        x = x - a;
    }

}
